SERVER-25765 Commands should wait for write concern even if they throw an exception

(cherry picked from commit 5bdd2f49c02e5fe2812ccc6f21502799fa5a3268)