src/mongo/db/s/config/configsvr_split_chunk_command.cpp
@@ -116,9 +116,7 @@ public:
                                                                parsedRequest.getChunkRange(),
                                                                parsedRequest.getSplitPoints(),
                                                                parsedRequest.getShardName());
-        if (!splitChunkResult.isOK()) {
-            return appendCommandStatus(result, splitChunkResult);
-        }
+        uassertStatusOK(splitChunkResult);
 
         return true;
     }
